--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <!-- Navigation -->
         <nav class="nav">
             <a href="#body"><div class="logo"></div></a>
+            <span class="menu">
+                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="0 0 384.97 384.97" style="enable-background:new 0 0 384.97 384.97;" xml:space="preserve"><path d="M12.03,120.303h360.909c6.641,0,12.03-5.39,12.03-12.03c0-6.641-5.39-12.03-12.03-12.03H12.03c-6.641,0-12.03,5.39-12.03,12.03C0,114.913,5.39,120.303,12.03,120.303z"/><path d="M372.939,180.455H12.03c-6.641,0-12.03,5.39-12.03,12.03s5.39,12.03,12.03,12.03h360.909c6.641,0,12.03-5.39,12.03-12.03 S379.58,180.455,372.939,180.455z"/><path d="M372.939,264.667H132.333c-6.641,0-12.03,5.39-12.03,12.03c0,6.641,5.39,12.03,12.03,12.03h240.606 c6.641,0,12.03-5.39,12.03-12.03C384.97,270.056,379.58,264.667,372.939,264.667z"/></svg>
+            </span>
+            <span class="close-menu">
+                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="0 0 512.001 512.001" style="enable-background:new 0 0 512.001 512.001;" xml:space="preserve"><path d="M284.286,256.002L506.143,34.144c7.811-7.811,7.811-20.475,0-28.285c-7.811-7.81-20.475-7.811-28.285,0L256,227.717 L34.143,5.859c-7.811-7.811-20.475-7.811-28.285,0c-7.81,7.811-7.811,20.475,0,28.285l221.857,221.857L5.858,477.859 c-7.811,7.811-7.811,20.475,0,28.285c3.905,3.905,9.024,5.857,14.143,5.857c5.119,0,10.237-1.952,14.143-5.857L256,284.287 l221.857,221.857c3.905,3.905,9.024,5.857,14.143,5.857s10.237-1.952,14.143-5.857c7.811-7.811,7.811-20.475,0-28.285 L284.286,256.002z"/></svg>
+            </span>
             <ul class="menu-items">
                 <li><a href="#works-view" class="nav-skills"><p>WORKS</p></a></li>
                 <li><a href="#skills-view" class="nav-skills"><p>SKILLS</p></a></li>
@@ -31,15 +37,15 @@
                 <div id="memoji" class="memoji"></div>
                 <p class="intro-hi">Hi, my name is</p>
                 <p class="intro-name">IBEABUCHI PAUL <br> CHUKWU<span class="intor-name--emphasis">NARU</span></p>
-                <p class="intro-about-me">I am a Frontend Developer, a UI Designer and a Graphic Designer
+                <p class="intro-about-me">I am a Frontend Developer, a UI Designer and a Graphic Designer.
                     <br> I love learning and working with peopel to bring something new to the table. 
-                    <br id="skills-view"> <!-- for scroll position of skills tab when skills option is clicked -->
+                    <br> <!-- for scroll position of skills tab when skills option is clicked -->
                     I am able to receive constructive critics as they help me get better.
                 </p>
                 <a href="#works-view"><button class="intro-my-works-btn colored-btn">MY WORKS</button></a>
                 <p class="intro-too-fancy">too fancy?</p>
             </div>
-
+            <br id="skills-view">
             
 
             <!-- Skills -->
@@ -344,6 +350,10 @@
                         <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="m437 0h-362c-41.355469 0-75 33.644531-75 75v362c0 41.355469 33.644531 75 75 75h362c41.355469 0 75-33.644531 75-75v-362c0-41.355469-33.644531-75-75-75zm45 437c0 24.8125-20.1875 45-45 45h-362c-24.8125 0-45-20.1875-45-45v-362c0-24.8125 20.1875-45 45-45h362c24.8125 0 45 20.1875 45 45zm0 0"/><path d="m241 211c0-33.085938-26.914062-60-60-60h-90v210h90c33.085938 0 60-26.914062 60-60 0-17.90625-7.894531-33.996094-20.378906-45 12.484375-11.003906 20.378906-27.09375 20.378906-45zm-30 90c0 16.542969-13.457031 30-30 30h-60v-60h60c16.542969 0 30 13.457031 30 30zm-90-60v-60h60c16.542969 0 30 13.457031 30 30s-13.457031 30-30 30zm0 0"/><path d="m346 211c-41.355469 0-75 33.644531-75 75s33.644531 75 75 75c26.691406 0 51.582031-14.363281 64.957031-37.488281l-25.96875-15.023438c-8.03125 13.886719-22.972656 22.511719-38.988281 22.511719-19.558594 0-36.238281-12.539062-42.429688-30h117.429688v-15c0-41.355469-33.644531-75-75-75zm-42.429688 60c6.191407-17.460938 22.871094-30 42.429688-30s36.238281 12.539062 42.429688 30zm0 0"/><path d="m286 151h120v30h-120zm0 0"/></svg>
                     </div>
                 </a>
+            </div>
+
+            <div class="copyright">
+                <p> Ibeabuchi Paul Chukwunaru &copy <span>2020</span></p>
             </div>
         </footer>
     </div>
