Added custom image viewer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <title>Naru Designs</title>
 </head>
 <body id="body">
+    <!-- Photo holder -->
+    <div id="dim" class="dim-background fade-in">
+        <div id="photo-holder" class="photo-holder"></div>
+    </div>
     <!-- pattern -->
     <div class="pattern"></div>
     <div class="container">
@@ -268,47 +272,47 @@
 
                 <!-- UI/UX screens -->
                 <section id="works-as-a-designer" class="works-as-a-designer">
-                    <div class="designs project">
+                    <div class="designs project" id="animal-app.jpg">
                         <div class="project-name-holder">
                                 <p class="project-name-holder-send project-title">Wildlife Homepage</p>
                         </div>
                     </div>
-                    <div class="designs project">
+                    <div class="designs project" id="gamers-dashboard.jpg">
                         <div class="project-name-holder">
                                 <p class="project-name-holder-send project-title">Gamers Dashboard</p>
                         </div>
                     </div>
-                    <div class="designs project">
+                    <div class="designs project" id="nysc-dashboard.jpg">
                         <div class="project-name-holder">
                                 <p class="project-name-holder-send project-title">NYSC Dashboard</p>
                         </div>
                     </div>
-                    <div class="designs project">
+                    <div class="designs project" id="pennny.png">
                         <div class="project-name-holder">
                                 <p class="project-name-holder-send project-title">Pennny Home Screens</p>
                         </div>
                     </div>
-                    <div class="designs project">
+                    <div class="designs project" id="shop-cart.jpg">
                         <div class="project-name-holder">
                                 <p class="project-name-holder-send project-title">Shopping Cart Page</p>
                         </div>
                     </div>
-                    <div class="designs project">
+                    <div class="designs project" id="social-media-app.png">
                         <div class="project-name-holder">
                                 <p class="project-name-holder-send project-title">Social Media Screens</p>
                         </div>
                     </div>
-                    <div class="designs project">
+                    <div class="designs project" id="thebigdot.jpg">
                         <div class="project-name-holder">
                                 <p class="project-name-holder-send project-title">TheBigDot Clock</p>
                         </div>
                     </div>
-                    <div class="designs project">
+                    <div class="designs project" id="widgets.jpg">
                         <div class="project-name-holder">
                                 <p class="project-name-holder-send project-title">Widget Kits</p>
                         </div>
                     </div>
-                    <div class="designs project">
+                    <div class="designs project" id="todo-dashboard.jpg">
                         <div class="project-name-holder">
                                 <p class="project-name-holder-send project-title">Todo Application</p>
                         </div>
