--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li><a id="works" href="#works-view" class="nav-skills"><p>WORKS</p></a></li>
                 <li><a id="skills" href="#skills-view" class="nav-skills"><p>SKILLS</p></a></li>
                 <li><a id="resume" href="https://docs.google.com/document/d/1YN2jdvAao2QBEhi6Z8kIPszTFF5fjDzf-6dPke34DFs/edit?usp=sharing" class="nav-resume"><p>RESUME</p></a></li>
-                <button id="say-hello" class="nav-say-hello-btn colored-btn"><a href="#contact-me" class="nav-say-hello-text">SAY HELLO</a> </button>
+                <a href="#contact-me" class="nav-say-hello-text"><button id="say-hello" class="nav-say-hello-btn colored-btn">SAY HELLO</button></a>
             </ul>
         </nav>
 
@@ -98,8 +98,18 @@
                     </div>
 
                     <div class="my-skills">
+                        <div class="illustrator-logo my-skills-logo"></div>
+                        <p class="my-skills-name">ADOBE ILLUSTRATOR</p>
+                    </div>
+
+                    <div class="my-skills">
                         <div class="invision-logo my-skills-logo"></div>
                         <p class="my-skills-name">INVISION STUDIO</p>
+                    </div>
+
+                    <div class="my-skills">
+                        <div class="sass-logo my-skills-logo"></div>
+                        <p class="my-skills-name">SASS</p>
                     </div>
                 </div>
                 <br id="works-view">
@@ -126,13 +136,13 @@
                                 <p class="project-name-holder-typo project-title">Typo</p>
                             </div>
 
-                            <section class="works-hover-state">
+                            <section class="works-hover-state fade-in">
                                 <p class="works-hover-state-name">Typo</p>
-                                <p class="works-hover-state-desc">This is simple typing game. <br> A set of text is given and required to be typed before a given time elapses. <br>
+                                <p class="works-hover-state-desc">This is a simple typing game. <br> A set of text is given and required to be typed before a given time elapses. <br>
                                 There are 3 difficulty stages: Newbie, Master and Pro. Think you can type fast? beat me by scoring over 2004 points on Pro level and share me your screenshot on game over.</p>
                                 <div class="works-hover-state-btns">
                                     <button class="works-hover-state-code"><a href="https://github.com/narudesigns/typo">Source code</a></button>
-                                    <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/typo">Demo</a></button>
+                                    <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/TYPO/">Demo</a></button>
                                 </div>
                             </section>
                         </div>
@@ -142,7 +152,7 @@
                                 <p class="project-name-holder-wordo project-title">Wordo</p>
                             </div>
 
-                            <section class="works-hover-state">
+                            <section class="works-hover-state fade-in">
                                 <p class="works-hover-state-name">Wordo</p>
                                 <p class="works-hover-state-desc">Wordo is a well structured dictionary. <br> It gives detailed info about the words being searched. <br> It also allows users to
                                     save words and view them later. You should use wordo.</p>
@@ -158,14 +168,14 @@
                                 <p class="project-name-holder-theBigDot project-title">theBigDot</p>
                             </div>
 
-                            <section class="works-hover-state">
+                            <section class="works-hover-state fade-in">
                                 <p class="works-hover-state-name">theBigDot</p>
                                 <p class="works-hover-state-desc">This I bet, is one unique clock you've not seen before! <br> 
                                     The main idea is to mimic the anologue clock without using the clock hands. <br>
                                 So here, the bold number reps the hour while the number in the dot reps the minute and is positioned according to the minute.</p>
                                 <div class="works-hover-state-btns">
                                     <button class="works-hover-state-code"><a href="https://github.com/narudesigns/thebigdot">Source code</a></button>
-                                    <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/thebigdot">Demo</a></button>
+                                    <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/theBigDot">Demo</a></button>
                                 </div>
                             </section>
                         </div>
@@ -175,14 +185,14 @@
                                 <p class="project-name-holder-phonebook project-title">Phonebook</p>
                             </div>
 
-                            <section class="works-hover-state">
+                            <section class="works-hover-state fade-in">
                                 <p class="works-hover-state-name">Phonebook</p>
                                 <p class="works-hover-state-desc">With phonebook you can store contacts on the web. <br> 
                                 You can also search for contacts, edit contact, delete contact and add contact. <br>
                                 It is also very responsive, you should check it out</p>
                                 <div class="works-hover-state-btns">
                                     <button class="works-hover-state-code"><a href="https://github.com/narudesigns/phonebook">Source code</a></button>
-                                    <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/phonebook">Demo</a></button>
+                                    <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/Phonebook">Demo</a></button>
                                 </div>
                             </section>
                         </div>                    
@@ -192,14 +202,14 @@
                                 <p class="project-name-holder-guessme project-title">Guess Me</p>
                             </div>
 
-                            <section class="works-hover-state">
+                            <section class="works-hover-state fade-in">
                                 <p class="works-hover-state-name">Guess Me</p>
                                 <p class="works-hover-state-desc">Guess Me is a word game you probably haven't seen around. <br>
                                 It is simple to play: a word of jumbled characters is displayed and the player is required to guess the correct word <br>
                                 by typing it in the input box. There are several levels to keep the user busy, a help button and a shuffle button to assist the user.</p>
                                 <div class="works-hover-state-btns">
                                     <button class="works-hover-state-code"><a href="https://github.com/narudesigns/guessme">Source code</a></button>
-                                    <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/guessme">Demo</a></button>
+                                    <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/GuessMe">Demo</a></button>
                                 </div>
                             </section>
                         </div>                    
@@ -209,13 +219,13 @@
                                 <p class="project-name-holder-stopwatch project-title">Stopwatch</p>
                             </div>
 
-                            <section class="works-hover-state">
+                            <section class="works-hover-state fade-in">
                                 <p class="works-hover-state-name">Stopwatch</p>
                                 <p class="works-hover-state-desc">This is one of my earliest projects. As the name implies, it is a simple stopwatch to mark intervals of time. <br>
                                 It has a dark and light mode view which gives users the chance to make preferences.</p>
                                 <div class="works-hover-state-btns">
                                     <button class="works-hover-state-code"><a href="https://github.com/narudesigns/stopwatch-x-darkmode">Source code</a></button>
-                                    <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/stopwatch-x-darkmode">Demo</a></button>
+                                    <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/Stopwatch-x-darkMode">Demo</a></button>
                                 </div>
                             </section>
                         </div>                    
@@ -225,13 +235,13 @@
                                 <p class="project-name-holder-url project-title">Shortly</p>
                             </div>
 
-                            <section class="works-hover-state">
+                            <section class="works-hover-state fade-in">
                                 <p class="works-hover-state-name">Shortly</p>
                                 <p class="works-hover-state-desc">Shorly is a url shortener. It accepts url link as input and produces a shorter version of the link. 
                                     There is also a button provided for users to copy the new shortened link for usage.</p>
                                     <div class="works-hover-state-btns">
                                         <button class="works-hover-state-code"><a href="https://github.com/narudesigns/url-shortener">Source code</a></button>
-                                        <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/url-shortener">Demo</a></button>
+                                        <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/URL-shortner">Demo</a></button>
                                     </div>
                             </section>
                         </div>     
@@ -241,7 +251,7 @@
                                 <p class="project-name-holder-send project-title">Send Animation</p>
                             </div>
 
-                            <section class="works-hover-state">
+                            <section class="works-hover-state fade-in">
                                 <p class="works-hover-state-name">Send Animation</p>
                                 <p class="works-hover-state-desc">This simple micro button interaction illustrates package delivery. <br>
                                 Want to be amazed? Hit the demo button below or go view the code on github.</p>
@@ -257,13 +267,13 @@
                                 <p class="project-name-holder-cloud project-title">Cloud Animation</p>
                             </div>
 
-                            <section class="works-hover-state">
+                            <section class="works-hover-state fade-in">
                                 <p class="works-hover-state-name">Cloud Animation</p>
                                 <p class="works-hover-state-desc">This is a simple micro button interaction also, it illustrates cloud upload. <br>
                                 Hit the demo button below to see this awesome interaction or go checkout the code on github.</p>
                                 <div class="works-hover-state-btns">
                                     <button class="works-hover-state-code"><a href="https://github.com/narudesigns/cloud-upload-animation">Source code</a></button>
-                                    <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/cloud-upload-animation">Demo</a></button>                                  
+                                    <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/Cloud-upload-animation">Demo</a></button>                                  
                                 </div>
                             </section>
                         </div>
@@ -370,8 +380,8 @@
          <h3 class="simple-view-skills">Skills</h3>
         <p>Javascript, Css3, Html5, Responsive Web Design, Fetch API, Git, Photoshop, Adobe Illustrator, Adobe Xd, Invision Studio, Sass</p>
         <h3 class="simple-view-works">Works</h3>
-        <h4><a href="https://narudesigns.github.io/typo">Typo - narudesigns.github.io/typo</a></h4>
-        <p>This is simple typing game. <br> A set of text is given and required to be typed before a given time elapses. <br>
+        <h4><a href="https://narudesigns.github.io/TYPO/">Typo - narudesigns.github.io/typo</a></h4>
+        <p>This is a simple typing game. <br> A set of text is given and required to be typed before a given time elapses. <br>
             There are 3 difficulty stages: Newbie, Master and Pro. Think you can type fast? beat me by scoring over 2004 points on Pro level and share me your screenshot on game over.
         </p>
 
