fixed resume link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </span>
                 <li><a id="works" href="#works-view" class="nav-skills"><p>WORKS</p></a></li>
                 <li><a id="skills" href="#skills-view" class="nav-skills"><p>SKILLS</p></a></li>
-                <li><a id="resume" href="https://docs.google.com/document/d/1YN2jdvAao2QBEhi6Z8kIPszTFF5fjDzf-6dPke34DFs/edit?usp=sharing" class="nav-resume"><p>RESUME</p></a></li>
+                <li><a id="resume" href="https://docs.google.com/document/d/1YN2jdvAao2QBEhi6Z8kIPszTFF5fjDzf-6dPke34DFs/edit?usp=drivesdk" class="nav-resume"><p>RESUME</p></a></li>
                 <a href="#contact-me" class="nav-say-hello-text"><button id="say-hello" class="nav-say-hello-btn colored-btn">SAY HELLO</button></a>
             </ul>
         </nav>
@@ -129,8 +129,7 @@
                 </section>
                 <hr />
                 
-                <section id="works-as-a-developer" class="works-as-a-developer">
-                    <!-- <div class="all-works"> -->
+                <section id="works-as-a-developer" class="works-as-a-developer fade-in">
                         <div class="typo project">
                             <div class="project-name-holder">
                                 <p class="project-name-holder-typo project-title">Typo</p>
@@ -277,11 +276,10 @@
                                 </div>
                             </section>
                         </div>
-                    <!-- </div>                                     -->
                 </section>
 
                 <!-- UI/UX screens -->
-                <section id="works-as-a-designer" class="works-as-a-designer">
+                <section id="works-as-a-designer" class="works-as-a-designer fade-in">
                     <div class="designs project" id="animal-app.jpg">
                         <div class="project-name-holder">
                                 <p class="project-name-holder-send project-title">Wildlife Homepage</p>
