added resume link to simple view

--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
             <br> I love learning and working with peopel to bring something new to the table. 
             <br> I am able to receive constructive critics as they help me get better.
          </p>
+         <p><a href="https://docs.google.com/document/d/1YN2jdvAao2QBEhi6Z8kIPszTFF5fjDzf-6dPke34DFs/edit?usp=drivesdk">Resume</a></p>
          <h3 class="simple-view-skills">Skills</h3>
         <p>Javascript, Css3, Html5, Responsive Web Design, Fetch API, Git, Photoshop, Adobe Illustrator, Adobe Xd, Invision Studio, Sass</p>
         <h3 class="simple-view-works">Works</h3>
