--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
             <br> I love learning and working with peopel to bring something new to the table. 
             <br> I am able to receive constructive critics as they help me get better.
          </p>
-         <p><a href="https://docs.google.com/document/d/1YN2jdvAao2QBEhi6Z8kIPszTFF5fjDzf-6dPke34DFs/edit?usp=drivesdk">Resume</a></p>
+         
          <h3 class="simple-view-skills">Skills</h3>
         <p>Javascript, Css3, Html5, Responsive Web Design, Fetch API, Git, Photoshop, Adobe Illustrator, Adobe Xd, Invision Studio, Sass</p>
         <h3 class="simple-view-works">Works</h3>
@@ -401,6 +401,8 @@
         <p><a href="https://twitter.com/paulister007">Twitter</a></p>
         <p><a href="mailto:ibeabuchipaul@gmail.com">Ibeabuchipaul@gmail.com</a></p>
         <p><a href="https://github.com/narudesigns">Github</a></p>
+        <!-- <hr>
+        <p><a href="https://docs.google.com/document/d/1YN2jdvAao2QBEhi6Z8kIPszTFF5fjDzf-6dPke34DFs/edit?usp=drivesdk">Resume</a></p> -->
 
         <p id="too-simple" class="too-simple">too simple?</p>
     </div>
