Added skills icons and increased Photo preview for mobile

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                         <p class="my-skills-name">RESPONSIVE WEB DESIGN</p>
                     </div>
 
-                    <div class="my-skills">
+                    <!-- <div class="my-skills">
                         <div class="api-logo my-skills-logo"></div>
                         <p class="my-skills-name">FETCH API</p>
-                    </div>
+                    </div> -->
 
                     <div class="my-skills">
                         <div class="git-logo my-skills-logo"></div>
