--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="icon" href="./images/naru-memoji.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;600;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="app.css">
     <title>Naru Designs</title>
 </head>
