added more projects

--- a/index.html
+++ b/index.html
@@ -278,6 +278,51 @@
                                 </div>
                             </section>
                         </div>
+
+                        <div class="checkbox-animation project">
+                            <div class="project-name-holder">
+                                <p class="project-name-holder-checkbox project-title">Checkbox Animation</p>
+                            </div>
+
+                            <section class="works-hover-state fade-in">
+                                <p class="works-hover-state-name">Checkbox Animation</p>
+                                <p class="works-hover-state-desc">This is a checkbox that illustrates day (light) and night (darkmode). I think the demo explains it better, go check it out!</p>
+                                <div class="works-hover-state-btns">
+                                    <button class="works-hover-state-code"><a href="https://github.com/NARUDESIGNS/checkbox-animation">Source code</a></button>
+                                    <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/checkbox-animation">Demo</a></button>                                  
+                                </div>
+                            </section>
+                        </div>
+
+                        <div class="numtowords project">
+                            <div class="project-name-holder">
+                                <p class="project-name-holder-numtowords project-title">NumToWords</p>
+                            </div>
+
+                            <section class="works-hover-state fade-in">
+                                <p class="works-hover-state-name">NumToWords</p>
+                                <p class="works-hover-state-desc">As the name implies, it convers numbers to words in English. <br> This algortithm is one i wrote within my first few weeks of learning Javascript, it is able to organize the inputted digits and represents them accurately in words as the user types.</p>
+                                <div class="works-hover-state-btns">
+                                    <button class="works-hover-state-code"><a href="https://github.com/NARUDESIGNS/numToWords">Source code</a></button>
+                                    <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/numToWords/">Demo</a></button>                                  
+                                </div>
+                            </section>
+                        </div>
+
+                        <div class="social-media-dashboard project">
+                            <div class="project-name-holder">
+                                <p class="project-name-holder-numtowords project-title">Social Media Dashboard</p>
+                            </div>
+
+                            <section class="works-hover-state fade-in">
+                                <p class="works-hover-state-name">Social Media Dashboard</p>
+                                <p class="works-hover-state-desc">This is one of the frontend challenge at <a href="https://frontendmentor.io"></a> frontendmentor.io. It is a resposive single page design with darkmode feature. Take a look by hitting the demo buttom below.</p>
+                                <div class="works-hover-state-btns">
+                                    <button class="works-hover-state-code"><a href="https://github.com/NARUDESIGNS/Social-Media-Dashboard">Source code</a></button>
+                                    <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/Social-Media-Dashboard/">Demo</a></button>                                  
+                                </div>
+                            </section>
+                        </div>
                 </section>
 
                 <!-- UI/UX screens -->
