fixed typographical errors

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                             <section class="works-hover-state fade-in">
                                 <p class="works-hover-state-name">Stopwatch</p>
                                 <p class="works-hover-state-desc">This is one of my earliest projects. As the name implies, it is a simple stopwatch to mark intervals of time. <br>
-                                It has a dark and light mode view which gives users the chance to make preferences.</p>
+                                It has a dark and light mode view which gives users the opportunity to make preferences.</p>
                                 <div class="works-hover-state-btns">
                                     <button class="works-hover-state-code"><a href="https://github.com/narudesigns/stopwatch-x-darkmode">Source code</a></button>
                                     <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/Stopwatch-x-darkMode">Demo</a></button>
@@ -301,7 +301,7 @@
 
                             <section class="works-hover-state fade-in">
                                 <p class="works-hover-state-name">NumToWords</p>
-                                <p class="works-hover-state-desc">As the name implies, it convers numbers to words in English. <br> This algortithm is one i wrote within my first few weeks of learning Javascript, it is able to organize the inputted digits and represents them accurately in words as the user types.</p>
+                                <p class="works-hover-state-desc">As the name implies, it converts numbers to words in English. <br> This algorithm is one i wrote within my first few weeks of learning Javascript, it is able to organize the inputted digits and represents them accurately in words as the user types.</p>
                                 <div class="works-hover-state-btns">
                                     <button class="works-hover-state-code"><a href="https://github.com/NARUDESIGNS/numToWords">Source code</a></button>
                                     <button class="works-hover-state-demo"><a href="https://narudesigns.github.io/numToWords/">Demo</a></button>                                  
