Fixed typo error in intro

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p class="intro-hi slide-up">Hi, my name is</p>
                 <p class="intro-name slide-up">IBEABUCHI PAUL <br> CHUKWU<span class="intro-name--emphasis">NARU</span></p>
                 <p class="intro-about-me slide-up">I am a Frontend Developer, a UI Designer and a Graphic Designer.
-                    <br> I love learning and working with peopel to bring something new to the table. 
+                    <br> I love learning and working with people to bring something new to the table. 
                     <br> <!-- for scroll position of skills tab when skills option is clicked -->
                     I am able to receive constructive critics as they help me get better.
                 </p>
@@ -419,7 +419,7 @@
          <h1 class="simple-view-name">Ibeabuchi Paul Chukwu<span>naru</span></h1>
          <p class="simple-view-about">
             I am a Frontend Developer, a UI Designer and a Graphic Designer.
-            <br> I love learning and working with peopel to bring something new to the table. 
+            <br> I love learning and working with people to bring something new to the table. 
             <br> I am able to receive constructive critics as they help me get better.
          </p>
          
