added graphql to skills list

--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
                         <div class="sass-logo my-skills-logo"></div>
                         <p class="my-skills-name">SASS</p>
                     </div>
+
+                    <div class="my-skills">
+                        <div class="graphql-logo my-skills-logo"></div>
+                        <p class="my-skills-name">GRAPHQL</p>
+                    </div>
                 </div>
                 <br id="works-view">
             </div>
