updated simple view skills list

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
          </p>
          
          <h3 class="simple-view-skills">Skills</h3>
-        <p>Javascript, Css3, Html5, Responsive Web Design, Git, Photoshop, Adobe Illustrator, Adobe Xd, Invision Studio, Sass</p>
+        <p>Javascript, Css3, Html5, Responsive Web Design, Git, Photoshop, Adobe Illustrator, Adobe Xd, Invision Studio, Sass, Graphql</p>
         <h3 class="simple-view-works">Works</h3>
         <h4><a href="https://narudesigns.github.io/TYPO/">Typo - narudesigns.github.io/typo</a></h4>
         <p>This is a simple typing game. <br> A set of text is given and required to be typed before a given time elapses. <br>
