corrected critic to critique

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <p class="intro-about-me slide-up">I am a Frontend Developer, a UI Designer and a Graphic Designer.
                     <br> I love learning and working with people to bring something new to the table. 
                     <br> <!-- for scroll position of skills tab when skills option is clicked -->
-                    I am able to receive constructive critics as they help me get better.
+                    I am able to receive constructive critiques as they help me get better.
                 </p>
                 <a href="#works-view"><button class="intro-my-works-btn colored-btn slide-up">MY WORKS</button></a>
                 <p id="too-fancy" class="intro-too-fancy fade-in">too fancy?</p>
@@ -425,7 +425,7 @@
          <p class="simple-view-about">
             I am a Frontend Developer, a UI Designer and a Graphic Designer.
             <br> I love learning and working with people to bring something new to the table. 
-            <br> I am able to receive constructive critics as they help me get better.
+            <br> I am able to receive constructive critiques as they help me get better.
          </p>
          
          <h3 class="simple-view-skills">Skills</h3>
