--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 <p class="intro-hi slide-up">Hi, my name is</p>
                 <p class="intro-name slide-up">IBEABUCHI PAUL <br> CHUKWU<span class="intro-name--emphasis">NARU</span></p>
                 <p class="intro-about-me slide-up">I am a Frontend Developer, a UI Designer and a Graphic Designer.
-                    <br> I love learning and working with people to bring something new to the table. 
+                    <br> I have experience working as a frontend developer, graphics designer and some user interface designs as well. 
                     <br> <!-- for scroll position of skills tab when skills option is clicked -->
-                    I am able to receive constructive critiques as they help me get better.
+                    I'm able to build functional web applications and easily convert UI designs into responsive web pages. I learn fast and can adapt to a new technology quickly.
                 </p>
                 <a href="#works-view"><button class="intro-my-works-btn colored-btn slide-up">MY WORKS</button></a>
                 <p id="too-fancy" class="intro-too-fancy fade-in">too fancy?</p>
