corrected line issue on info

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                 <p class="intro-about-me slide-up">I am a Frontend Developer, a UI Designer and a Graphic Designer.
                     <br> I have experience working as a frontend developer, graphics designer and some user interface designs as well. 
                     <br> <!-- for scroll position of skills tab when skills option is clicked -->
-                    I'm able to build functional web applications and easily convert UI designs into responsive web pages. I learn fast and can adapt to a new technology quickly.
+                    I'm able to build functional web applications and easily convert UI designs into responsive web pages. 
+                    <br> I learn fast and can adapt to a new technology quickly.
                 </p>
                 <a href="#works-view"><button class="intro-my-works-btn colored-btn slide-up">MY WORKS</button></a>
                 <p id="too-fancy" class="intro-too-fancy fade-in">too fancy?</p>
