--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </span>
                 <li><a id="works" href="#works-view" class="nav-skills"><p>WORKS</p></a></li>
                 <li><a id="skills" href="#skills-view" class="nav-skills"><p>SKILLS</p></a></li>
-                <li><a id="resume" href="https://docs.google.com/document/d/1YN2jdvAao2QBEhi6Z8kIPszTFF5fjDzf-6dPke34DFs/edit?usp=drivesdk" target="_blank" class="nav-resume"><p>RESUME</p></a></li>
+                <li><a id="resume" href="https://github.com/NARUDESIGNS/narudesigns.git" target="_blank" class="nav-resume"><p>RESUME</p></a></li>
                 <a href="#contact-me" class="nav-say-hello-text"><button id="say-hello" class="nav-say-hello-btn colored-btn">SAY HELLO</button></a>
             </ul>
         </nav>
