--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 <div id="memoji" class="memoji pop"></div>
                 <p class="intro-hi slide-up">Hi, my name is</p>
                 <p class="intro-name slide-up">IBEABUCHI PAUL <br> CHUKWU<span class="intro-name--emphasis">NARU</span></p>
-                <p class="intro-about-me slide-up">I am a Frontend Developer, a UI Designer and a Graphic Designer.
-                    <br> I have experience working as a frontend developer, graphics designer and some user interface designs as well. 
+                <p class="intro-about-me slide-up">I am a Frontend Engineer skilled with some knowledge on UI designs.
+                    <br> I'm usually curious and I really like to find out the "Why" of things.
                     <br> <!-- for scroll position of skills tab when skills option is clicked -->
-                    I'm able to build functional web applications and easily convert UI designs into responsive web pages. 
+                    I'm able to build functional web applications and easily convert UI designs into pixel perfect responsive web pages. 
                     <br> I learn fast and can adapt to a new technology quickly.
                 </p>
                 <a href="#works-view"><button class="intro-my-works-btn colored-btn slide-up">MY WORKS</button></a>
